# APEX-Universal-AI-Operating-System

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  app.py  deploy-local.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  skills-lock.json
.github/: drift-config.yml
.github/workflows/: android-build.yml  auto-complete-repair.yml  (+14 more)
android/: .gitignore  README.md  settings.gradle.kts
docs/: ACCELERATED_7_DAY_BLITZ.md  ATLAS.md  BUSINESS_DOMINATION.md  COMPLETE_PACKAGE_MANIFEST.md  DAILY_EXECUTION_CARD.md  DEPLOYMENT.md  DRIFT_DETECTION.md  EXECUTIVE_SUMMARY_BUSINESS_READINESS.md  FINAL_EXECUTION_BRIEF.md  QUICKSTART.md  README.md  README_START_HERE.md  REVENUE_BLOCKERS_REPORT.md  VERCEL_WEB_ANALYTICS.md  business_infrastructure_action_items.md  gantt_chart_timeline.md  implementation_checklists.md  vendor_and_provider_guide.md
mars-api-bootstrap/: README.md
scripts/: garcar.sh
src/: __init__.py  apex_core.py  atlas_dispatch.py  billing.py  breakthrough_engine.py  dashboard_api.py  dashboard_service.py  db.py  entitlements.py  integrations_api.py  integrations_service.py  pricing.py  superintelligence.py  unicorn_factory.py  vercel_connect.py
static/: index.html
supabase/: .gitignore  config.toml
tests/: __init__.py  conftest.py  test_apex_core.py  test_app.py  test_atlas_dispatch.py  test_billing.py  test_breakthrough_engine.py  test_dashboard.py  test_db.py  test_entitlements.py  test_integrations.py  test_pricing.py  test_superintelligence.py  test_unicorn_factory.py  test_vercel_connect.py
(+30 files in other folders)
