[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-ai-os"
version = "1.0.0"
description = "APEX Universal AI Operating System"
requires-python = ">=3.10"

[project.scripts]
app = "app:app"

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 127
known_first_party = ["src"]

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/conftest.py"]

[tool.coverage.report]
fail_under = 60
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
